--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: rgb(0, 0, 0);
-    --cor-de-fundo: #1ff00c;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
+    --branco: rgb(255, 255, 255);
+    --cor-de-fundo: #20fc0c;
+    --fundo-senha: #f80707;
+    --fundo-texto: #010913;
     --borda: #34ff01;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
