--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco: rgb(255, 255, 255);
     --cor-de-fundo: #20fc0c;
     --fundo-senha: #f80707;
-    --fundo-texto: #010913;
+    --fundo-texto: #fc0b0b;
     --borda: #34ff01;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
