--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root {
     --branco: rgb(255, 255, 255);
-    --cor-de-fundo: #20fc0c;
-    --fundo-senha: #f80707;
-    --fundo-texto: #fc0b0b;
-    --borda: #34ff01;
+    --cor-de-fundo: #5801fa;
+    --fundo-senha: #00eeff;
+    --fundo-texto: #00eeff;
+    --borda: #013cff;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
