--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root {
     --branco: rgb(255, 255, 255);
-    --cor-de-fundo: #5801fa;
-    --fundo-senha: #00eeff;
-    --fundo-texto: #00eeff;
-    --borda: #013cff;
+    --cor-de-fundo: #000000;
+    --fundo-senha: #b11717;
+    --fundo-texto: #a10e0e;
+    --borda: #000000;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
@@ -136,12 +136,12 @@ label {
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #b9360e;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #be1111;
     width: 100%;
 }
 
