--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     background-color: var(--cor-de-fundo);
     font-family: var(--roboto);
 }
-
+Uploads are disabled.Uploads are disabled.
 .titulo-principal {
     font-family: var(--roboto-mono);
     font-size: 32px;
