--- a/style.css
+++ b/style.css
@@ -136,12 +136,12 @@ label {
 }
 
 .media {
-    background-color: #b9360e;
+    background-color: #ffee00;
     width: 50%;
 }
 
 .forte {
-    background-color: #be1111;
+    background-color: #33ff00;
     width: 100%;
 }
 
